Fix navbar not collapsing anymore on mobile

--- a/assets/scss/tale/_theme.scss
+++ b/assets/scss/tale/_theme.scss
@@ -22,10 +22,11 @@ $headings-color: $default-shade;
 
 $body-bg: #fff;
 
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-sans-serif: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 
-$headings-font-family: $font-family-sans-serif;
 
 $font-family-serif: 'Libre Baskerville', 'Times New Roman', Times, serif;
-$font-family-base: $font-family-serif;
+
+$headings-font-family: $font-family-serif;
+$font-family-base: $font-family-sans-serif;
